--- a/src/style/components/_burger-btn.sass
+++ b/src/style/components/_burger-btn.sass
@@ -6,9 +6,8 @@ $nav-burger-line-width: $nav-burger-size * 0.4
 /** Dangerous math ahead. Touch with care */
 $nav-burger-line-left: ($nav-burger-size - $nav-burger-line-width) * 0.5
 $nav-burgerLine-top-offset:    ($nav-burger-size - ($nav-burger-inner-size)) * 0.5
-$nav-burgerLine-middle-offset: $nav-burgerLine-top-offset + $nav-burger-inner-size * 0.5)
-$nav-burgerLine-bottom-offset: $nav-burgerLine-top-offset + $nav-burger-inner-size)
-
+$nav-burgerLine-middle-offset: ($nav-burgerLine-top-offset + $nav-burger-inner-size) * 0.5
+$nav-burgerLine-bottom-offset: ($nav-burgerLine-top-offset + $nav-burger-inner-size)
 .BurgerBtn
   
   pointer-events: all
@@ -49,8 +48,7 @@ $nav-burgerLine-bottom-offset: $nav-burgerLine-top-offset + $nav-burger-inner-si
     display: block
     width: 200px
     margin-left: -210px
-    z-index: 1000
-
+    
 .BurgerBtn-line
   
   position: absolute
