intial update for website online edition

--- a/src/style/components/_speaker-information.sass
+++ b/src/style/components/_speaker-information.sass
@@ -4,7 +4,8 @@ $SpeakerInformation-picture-size-mobile: 60px
 
 .SpeakerInformation
   +sans-serif
-  display: inline-flex
+  // display: inline-flex
+  display: flex
   justify-content: flex-start
   align-items: center
 
